# fairshare_gpu

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: example_logical_tgi.yaml  example_logical_vllm.yaml  example_mig_vllm.yaml  example_mps_vllm.yaml
data/: README.md  prompts_small.jsonl
report/: final_report.tex  refs.bib
runs/: summary.csv
runs/logical/: gpu.csv  meta.json  requests.jsonl
runs/logical/analysis/: aggregate.csv  per_tenant.csv  summary.json
runs/mig_sim/: gpu.csv  meta.json  requests.jsonl
runs/mig_sim/analysis/: aggregate.csv  per_tenant.csv  summary.json
runs/mps/: gpu.csv  meta.json  requests.jsonl
runs/mps/analysis/: aggregate.csv  per_tenant.csv  summary.json
scripts/: launch_vllm_server.py
src/fairshare_gpu/: __init__.py  __main__.py  analysis.py  benchmark.py  cli.py  config.py  gpu_monitor.py  plots.py  records.py  synthetic.py  tokenization.py  workloads.py
src/fairshare_gpu/clients/: openai_client.py  tgi_client.py
