[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fairshare-gpu"
version = "0.1.0"
description = "Multi-tenant GPU sharing benchmark harness for LLM inference (MIG/MPS + vLLM/TGI)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Vahab Jabrayilov"}]

dependencies = [
  "httpx>=0.27.0",
  "pyyaml>=6.0.1",
  "pydantic>=2.6.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "matplotlib>=3.8.0",
  "rich>=13.7.0",
  "pynvml>=11.5.0",
  "transformers>=4.41.0",
  "sentencepiece>=0.2.0",
]

[project.scripts]
fairshare-gpu = "fairshare_gpu.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
